<resources>
    <string name="app_name">Itime</string>
    <string name="serverClientId">198214728870-4lr8558oe2qfnophucb6lei6dlea4rjg.apps.googleusercontent.com</string>
    <string name="default_cover">http://itime-1254199931.picgz.myqcloud.com/bg_default.png</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_leave">Leave</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_invite">Invite</string>
    <string name="dialog_save_for_this_event_only">Save for this event only</string>
    <string name="dialog_save_for_future_events">Save for future events</string>
    <string name="toolbar_done">Done</string>
    <string name="toolbar_confirm">Confirm</string>
    <string name="toolbar_vote">Vote</string>
    <string name="toolbar_custom">Custom</string>
    <string name="toolbar_cancel">Cancel</string>
    <string name="toolbar_url">URL</string>
    <string name="toolbar_note">Note</string>
    <string name="toolbar_select">Select</string>
    <string name="toolbar_calendars">Calendars</string>
    <string name="toolbar_location">Location</string>
    <string name="toolbar_event">Event</string>
    <string name="toolbar_timeslots">Timeslots</string>
    <string name="toolbar_choose_timeslots">Choose Timeslots</string>
    <string name="toolbar_alert">Alert</string>
    <string name="toolbar_save">Save</string>
    <string name="toolbar_greeting">Greetings</string>
    <string name="toolbar_send">Send</string>
    <string name="toolbar_next">Next</string>
    <string name="toolbar_timeslots_select">%1$d/%2$d Timeslots</string>
    <string name="toolbar_activities">Activities</string>
    <string name="toolbar_mute">Mute</string>
    <string name="toolbar_unmute">Unmute</string>
    <string name="toolbar_view_in_calendar">Calendar</string>
    <string name="toolbar_login">LOGIN</string>
    <string name="event">Event</string>
    <string name="create_an_event">Create An Event</string>
    <string name="event_detail_header_hosted_by">Hosted by</string>
    <string name="event_detail_header_invitees">invitee</string>
    <string name="event_detail_location">Location</string>
    <string name="event_detail_time">Time</string>
    <string name="event_detail_note">Note</string>
    <string name="event_detail_note_read_all">Read All</string>
    <string name="event_detail_url">URL</string>
    <string name="event_detail_photo">Photo</string>
    <string name="event_detail_calendar">Calendar</string>
    <string name="event_detail_all_invitees">All Invitees</string>
    <string name="event_detail_replied">Replied</string>
    <string name="event_detail_cant_go">Can\'t go</string>
    <string name="event_detail_no_reply">No Reply</string>
    <string name="event_detail_itime_contact_title">iTime Contacts</string>
    <string name="event_detail_youmayhaveconfilict">You may have conflict on the timeslot</string>
    <string name="event_detail_sheet_left_choosetimeslots">Choose Timeslots</string>
    <string name="event_detail_sheet_left_confirm_a_timeslot">Confirm a Timeslot</string>
    <string name="event_detail_sheet_left_voted">Voted</string>
    <string name="event_detail_sheet_left_not_going">Not Going</string>
    <string name="event_detail_view_in_calendar">View in calendar</string>
    <string name="event_detail_icannotgoatalltimeslots">I can\'t go at all timeslot</string>
    <string name="event_detail_thetimeslotisoutdated">The timeslot is outdated</string>
    <string name="event_detail_pleaseselectatleast1timeslot">Please select at least 1 timeslot</string>
    <string name="event_detail_pleaseselect1timeslot">Please select 1 timeslot</string>
    <string name="event_detail_submit_vote">Submit Vote</string>
    <string name="event_detail_submit_n_vote">Submit Vote (%1$d/%2$d)</string>
    <string name="event_detail_voted_for_n_timeslots">You\'ve voted for %1$d Timeslots</string>
    <string name="event_detail_voted_n_people_voted">%1$d PEOPLE VOTED</string>
    <string name="event_detail_confirm">Confirm</string>
    <string name="event_detail_Going">Going</string>
    <string name="event_detail_notgoing">Not Going</string>
    <string name="event_detail_archive">Archive</string>
    <string name="event_detail_archived">Archived</string>
    <string name="event_detail_eventcanceled">Event Canceled</string>
    <string name="event_detail_invitationexpired">Invitation Expired</string>
    <string name="event_detail_icantgo">I can\'t go</string>
    <string name="event_detail_youare">You are:</string>
    <string name="event_detail_please_decide">Please decide:</string>
    <string name="event_detail_peoplegoing">People going</string>
    <string name="event_detail_setyouralert">Set your alert</string>
    <string name="event_detail_youcannotchangeafterconfirmation">You cannot change timeslot after confirmation!</string>
    <string name="event_detail_peoplenotgoing">People not going</string>
    <string name="event_detail_decided_not_to_go">You\'ve decided not to go</string>
    <string name="event_detail_alert_empty_vote">Please select at least 1 timeslot</string>
    <string name="event_detail_alert_unsaved_vote">You have unsaved votes. Do you want to discard them?</string>
    <string name="event_detail_alert_unsaved_confirm">You haven\'t confirmed the timeslot. Do you want to discard it?</string>
    <string name="event_detail_dialog_discard">Discard</string>
    <string name="event_detail_dialog_stay">Stay</string>
    <string name="event_detail_dialog_keep_voting">Keep voting</string>
    <string name="event_detail_alert_empty_confirm">Please select 1 timeslot</string>
    <string name="event_detail_changemind">Change your mind? Please choose some timeslots above</string>
    <string name="event_detail_toolbar_mute">Mute</string>
    <string name="event_detail_toolbar_muted">Unmute</string>
    <string name="event_detail_toolbar_pin">Pin</string>
    <string name="event_detail_toolbar_pinned">Unpin</string>
    <string name="event_detail_toolbar_archive">Archive</string>
    <string name="event_detail_toolbar_archived">Archived</string>
    <string name="event_detail_toolbar_share">Share</string>
    <string name="event_detail_toolbar_delete">Delete Event</string>
    <string name="event_detail_toolbar_duplicate">Duplicate</string>
    <string name="event_detail_toolbar_history">Activities</string>
    <string name="event_detail_toolbar_remind">Remind everyone</string>
    <string name="event_create_inviteothers">Invite Others</string>
    <string name="event_create_onlymyself">Only Myself</string>
    <string name="event_create_confirm_toolbar">Confirm</string>
    <string name="event_create_confirm_done">Done</string>
    <string name="event_detail_dialog_cantgo_title">Can\'t go</string>
    <string name="event_detail_dialog_remind">Remind</string>
    <string name="event_detail_dialog_remind_title">Every invitee will recieve a system reminder </string>
    <string name="event_detail_dialog_cantgo_message">You can leave a message (Optional)</string>
    <string name="event_detail_dialog_cantgo_hint">Why you can\'t go</string>
    <string name="event_detail_delete_dialog_title">Delete this event</string>
    <string name="event_detail_delete_dialog_repeat_title">Delete a repeating event</string>
    <string name="event_detail_delete_dialog_message">Invitees will be notified that this event was cancelled and everything about this event will be deleted</string>
    <string name="event_detail_delete_dialog_input_hints">Leave a comment for your invitees (optional)</string>
    <string name="event_detail_delete_dialog_cancel">Cancel</string>
    <string name="event_invitation_sent">Invitation Sent</string>
    <string name="invitation_sent_reject_text">Your invitation is successfully sent, but rejected by some invitees because they have blocked you:</string>
    <string name="event_photo">photo</string>
    <string name="event_create_addinvitee">Add Invitee</string>
    <string name="event_create_addinvitee_typeemailhere">Type Email here</string>
    <string name="event_create_itimecontacts">iTime Contacts</string>
    <string name="event_create_recent_invitee">RECENT</string>
    <string name="event_create_peopleinvited">PEOPLE INVITEED</string>
    <string name="event_create_allowthemtoseeeachothervote">Allow them to see each other\'s votes</string>
    <string name="event_detail_all_invitee_title">%1$d Invitees</string>
    <string name="event_detail_all_invitee_tag_going">%1$d Going</string>
    <string name="event_detail_all_invitee_tag_notgoing">%1$d Not Going</string>
    <string name="event_detail_all_invitee_tag_noreply">%1$d No Reply</string>
    <string name="event_change_cover">Change Cover Photo</string>
    <string name="event_change_cover_title">Change Cover Photo</string>
    <string name="event_candidate_timeslots">%1$d Candidate Timeslots: </string>
    <string name="event_timeslot_single_start_time">%1$s</string>
    <string name="event_timeslot_single_end_time">%1$s</string>
    <string name="event_timeslot_single_day">%1$s</string>
    <string name="event_create_title_suggested">SUGGESTED</string>
    <string name="event_create_title_recent">RECENT</string>
    <string name="event_default_title">New Event</string>
    <string name="event_create_duration">Duration</string>
    <string name="duration_15_minutes">15 minutes</string>
    <string name="duration_30_minutes">30 minutes</string>
    <string name="duration_45_minutes">45 minutes</string>
    <string name="duration_1_hour">1 hour</string>
    <string name="duration_2_hours">2 hours</string>
    <string name="duration_6_hours">6 hours</string>
    <string name="duration_all_day">All Day</string>
    <string name="event_calnedar_itime_calendars">ITIME CALENDARS</string>
    <string name="locationString1">Location</string>
    <string name="event_invitees_title">Invitees</string>
    <string name="event_title_hint">Enter Event Title</string>
    <string name="event_duration_title">Duration</string>
    <string name="event_add_timeslot">Add a timeslot</string>
    <string name="event_location_hint">No Location</string>
    <string name="event_calendars_title">Calendars</string>
    <string name="event_repeat_frequency">Frequency</string>
    <string name="event_custom_repeat_every">Every</string>
    <string name="event_custom_repeat_day">day</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_photos">Choose from Photos</string>
    <string name="cover_collections">iTime Cover Collections</string>
    <string name="notifications">Notifications</string>
    <string name="setting_default_alert">Default Alert</string>
    <string name="setting_notifications_subtext1">Enable or disable TimeGenii Notifications via
“Settings”->“Notifications” on your iPhone.</string>
    <string name="setting_notification_default_subtext">Set the default time you would like to be reminded about an event</string>
    <string name="setting_show_preview_Text">Show Preview Text</string>
    <string name="setting_notifications_subtext2">Message notifications will contain event summary when enabled</string>
    <string name="setting_in_app_alert_sound">In-App Alert Sound</string>
    <string name="setting_vibrate">Vibrate</string>
    <string name="setting_notifications_subtext3">Specify preference to be notified by Sound or Vibration when receiving new notifications</string>
    <string name="setting_reset_password_subtext1">Enter a new password for this account. You can use the Email and the password to log in to Timegenii next time.</string>
    <string name="setting_email">Email</string>
    <string name="setting_password">Password</string>
    <string name="setting_confirm">Confirm</string>
    <string name="setting_password_hint">New Timegenii password</string>
    <string name="setting_confirm_hint">Confirm password</string>
</resources>