<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="org.unimelb.itime.util.AppUtil"/>
        <variable
            name="contentVM"
            type="org.unimelb.itime.ui.viewmodel.SettingViewModel"/>
        <variable
            name="toolbarVM"
            type="org.unimelb.itime.ui.viewmodel.ToolbarViewModel"/>
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background">

    <include layout="@layout/toolbar"
        bind:vm="@{toolbarVM}"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/whiteThree">

        <!--first part-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="16dp"
            android:background="@drawable/bg_divider_top_bottom"
            android:onClick="@{contentVM.notificationListener}">

            <TextView
                style="@style/itime_blacktitle_17sp"
                android:text="@string/notifications"/>

            <me.fesky.library.widget.ios.Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:clickable="false"
                android:checked="@{contentVM.setting.enableNotification}"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <!-- second part, subtext 1 -->
        <TextView
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="5dp"
            android:text="@string/setting_notifications_subtext1"
            android:textColor="@color/warmGreyTwo"
            android:textSize="@dimen/font_middle"
            />

        <!--Default Alert part-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_divider_top_bottom"
            android:layout_marginTop="20dp"
            android:onClick="@{contentVM.onAlertClick()}"
            android:paddingLeft="16dp">

            <TextView
                style="@style/itime_blacktitle_17sp"
                android:text="@string/setting_default_alert"/>

            <TextView
                style="@style/itime_subtitle_15sp"
                android:text="@{AppUtil.getDefaultAlertStr(contentVM.setting.defaultAlertTime)}" />

            <TextView
                style="@style/arrow_disclosure_indicator" />
        </RelativeLayout>

        <!-- second part, subtext 1 -->
        <TextView
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="5dp"
            android:text="@string/setting_notification_default_subtext"
            android:textColor="@color/warmGreyTwo"
            android:textSize="@dimen/font_middle"
            />


        <!--third part, show preview text-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_divider_top_bottom"
            android:paddingLeft="16dp"
            android:layout_marginTop="20dp"
            >
            <TextView
                style="@style/itime_blacktitle_17sp"
                android:text="@string/setting_show_preview_Text"/>

            <me.fesky.library.widget.ios.Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:onCheckChange="@{contentVM.onShowPreviewTextChange()}"
                android:checked="@{contentVM.setting.showPreviewText}"
                />
        </RelativeLayout>

        <!--forth part, subtext 2-->
        <TextView
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="5dp"
            android:text="@string/setting_notifications_subtext2"
            android:textColor="@color/warmGreyTwo"
            android:textSize="@dimen/font_middle"
            />

        <!--fifth part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_divider_top_bottom"
            android:paddingLeft="16dp">

            <!--in app alert sound-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                >
                <TextView
                    style="@style/itime_blacktitle_17sp"
                    android:text="@string/setting_in_app_alert_sound"/>

                <me.fesky.library.widget.ios.Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="16dp"
                    android:onCheckChange="@{contentVM.onInAppAlertSoundChange()}"
                    android:checked="@{contentVM.setting.appAlertSound}"
                    android:layout_centerVertical="true"/>

                <TextView
                    style="@style/itime_bottom_divider_line" />

            </RelativeLayout>

            <!--Vibrate-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">
                <TextView
                    style="@style/itime_blacktitle_17sp"
                    android:text="@string/setting_vibrate"/>

                <me.fesky.library.widget.ios.Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="16dp"
                    android:onCheckChange="@{contentVM.onVibrateChange()}"
                    android:checked="@{contentVM.setting.systemVibrate}"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>


        </LinearLayout>


        <!--sixth part, subtext 3-->
        <TextView
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="5dp"
            android:text="@string/setting_notifications_subtext3"
            android:textColor="@color/warmGreyTwo"
            android:textSize="@dimen/font_middle"
            />
    </LinearLayout>
</LinearLayout>
</layout>
