<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="toolbarVM"
            type="org.unimelb.itime.ui.viewmodel.ToolbarViewModel"/>
        <variable
            name="vm"
            type="org.unimelb.itime.ui.viewmodel.event.EventRepeatCustomViewModel"/>
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <include layout="@layout/toolbar"
        bind:vm="@{toolbarVM}"/>

    <!--Frequency-->
    <RelativeLayout
        android:layout_marginTop="30dp"
        style="@style/ItimeRelativeCell"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            style="@style/itime_top_divider_line" />

        <TextView
            style="@style/itimeCellTitle"
            android:layout_marginStart="16dp"
            android:text="@string/event_repeat_frequency"/>

        <TextView
            style="@style/itimeCellRightContent"
            android:layout_marginRight="15dp"
            android:text="@{vm.frequencyString}"/>

        <TextView
            style="@style/itime_bottom_divider_line"
            android:layout_marginStart="16dp"/>

    </RelativeLayout>

    <!--wheel picker-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.aigestudio.wheelpicker.WheelPicker
            android:id="@+id/repeat_wheel_picker"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/white"/>
        <TextView
            style="@style/itime_bottom_divider_line"
            android:layout_marginStart="16dp"/>
    </RelativeLayout>


    <!--every-->
    <RelativeLayout
        style="@style/ItimeRelativeCell"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            style="@style/itimeCellTitle"
            android:layout_marginStart="16dp"
            android:text="@string/event_custom_repeat_every"
            />

        <TextView
            style="@style/itimeCellRightContent"
            android:text="@string/event_custom_repeat_day"/>

    </RelativeLayout>



</LinearLayout>
</layout>
